fix: adjust modal spacing

--- a/codigo/frontend/components/DeleteConfirm/styles.module.scss
+++ b/codigo/frontend/components/DeleteConfirm/styles.module.scss
@@ -1,4 +1,5 @@
 .container {
+  height: 100%;
   padding: 20px;
   position: relative;
   text-align: center;
@@ -12,7 +13,7 @@
     display: flex;
     justify-content: space-evenly;
     position: absolute;
-    bottom: 20px;
+    bottom: 10px;
     left: 0;
 
     button {
